WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
12118
REGRESSION (Context menus): No context menu displayed when clicking outside a short document
https://bugs.webkit.org/show_bug.cgi?id=12118
Summary
REGRESSION (Context menus): No context menu displayed when clicking outside a...
mitz
Reported
2007-01-04 15:57:53 PST
If you have a document that doesn't fill the entire window (such as <about:blank> or <data:text/html,foo>), control-clicking below the document content doesn't bring up a context menu.
Attachments
Add attachment
proposed patch, testcase, etc.
Beth Dakin
Comment 1
2007-01-04 16:31:37 PST
Fixed with
r18600
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug