        Reviewed by Adam.

Fix for http://bugs.webkit.org/show_bug.cgi?id=12118 REGRESSION
        (Context menus): No context menu displayed when clicking outside a
        short document

        No test case added since we do not currently have a way to automate
        context menus.

        * page/ContextMenuController.cpp:
        (WebCore::ContextMenuController::handleContextMenuEvent): If the
        hit test does not find a node, use the document node.


Canonical link: https://commits.webkit.org/15626@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@18600 268f45cc-cd09-0410-ab3c-d52691b4dbfc